fix(config): CORS 설정 변경